// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EngagementRate when data is loaded renders a component with data loaded 1`] = `
<DocumentFragment>
  <a
    class="chart__title"
    href="/definitions#report_historical_engagement_rate"
  >
    <span
      class="usa-tooltip"
    >
      <span
        aria-describedby="tooltip-550000"
        class="usa-tooltip__trigger"
        data-position="top"
        tabindex="0"
      >
        Percent of Engaged Sessions
      </span>
      <span
        aria-hidden="true"
        class="usa-tooltip__body"
        id="tooltip-550000"
        role="tooltip"
      >
        The percentage of sessions where users were engaged with the site or application.
      </span>
    </span>
  </a>
  <div>
    <div
      class="data chart__rate padding-top-05"
    >
      56.7%
    </div>
  </div>
</DocumentFragment>
`;

exports[`EngagementRate when data is not loaded renders a component in loading state 1`] = `
<DocumentFragment>
  <a
    class="chart__title"
    href="/definitions#report_historical_engagement_rate"
  >
    <span
      class="usa-tooltip"
    >
      <span
        aria-describedby="tooltip-550000"
        class="usa-tooltip__trigger"
        data-position="top"
        tabindex="0"
      >
        Percent of Engaged Sessions
      </span>
      <span
        aria-hidden="true"
        class="usa-tooltip__body"
        id="tooltip-550000"
        role="tooltip"
      >
        The percentage of sessions where users were engaged with the site or application.
      </span>
    </span>
  </a>
  <div>
    <div
      class="data chart__rate padding-top-05"
    />
  </div>
</DocumentFragment>
`;

exports[`EngagementRate when data loading has an error renders a component in error state 1`] = `
<DocumentFragment>
  <a
    class="chart__title"
    href="/definitions#report_historical_engagement_rate"
  >
    <span
      class="usa-tooltip"
    >
      <span
        aria-describedby="tooltip-550000"
        class="usa-tooltip__trigger"
        data-position="top"
        tabindex="0"
      >
        Percent of Engaged Sessions
      </span>
      <span
        aria-hidden="true"
        class="usa-tooltip__body"
        id="tooltip-550000"
        role="tooltip"
      >
        The percentage of sessions where users were engaged with the site or application.
      </span>
    </span>
  </a>
  <div>
    <div
      class="data chart__rate padding-top-05"
    />
  </div>
</DocumentFragment>
`;
